# DSA

./: .challenge_map.json  .gitignore  CLAUDE.md  Cargo.toml  README.md
CH01/: README.md  solution.rs
CH02/: README.md  solution.rs
CH03/: README.md  solution.rs
CH04/: README.md  solution.rs
CH05/: README.md  solution.rs
CH06/: README.md  solution.rs
CH07/: README.md  solution.rs
CH08/: README.md  solution.rs
CH09/: README.md  solution.rs
CH10/: README.md  solution.rs
CH11/: README.md  solution.rs
CH12/: README.md  solution.rs
CH13/: README.md  solution.rs
CH14/: README.md  solution.rs
CH15/: README.md  solution.rs
CH16/: README.md  solution.rs
CH17/: README.md  solution.rs
CH18/: README.md  solution.rs
CH19/: README.md  solution.rs
CH20/: README.md  solution.rs
CH21/: README.md  solution.rs
CH22/: README.md  solution.rs
CH23/: README.md  solution.rs
CH24/: README.md  solution.rs
CH25/: README.md  solution.rs
CH26/: README.md  solution.rs
CH27/: README.md  solution.rs
CH28/: README.md  solution.rs
CH29/: README.md  solution.rs
CH30/: README.md  solution.rs
CH31/: README.md  solution.rs
CH32/: README.md  solution.rs
CH33/: README.md  solution.rs
CH34/: README.md  solution.rs
CH35/: README.md  solution.rs
CH36/: README.md  solution.rs
CH37/: README.md  solution.rs
CH38/: README.md  solution.rs
CH39/: README.md  solution.rs
CH40/: README.md  solution.rs
CH41/: README.md  solution.rs
CH42/: README.md  solution.rs
CH43/: README.md  solution.rs
CH44/: README.md  solution.rs
CH45/: README.md  solution.rs
CH46/: README.md  solution.rs
CH47/: README.md  solution.rs
CH48/: README.md  solution.rs
CH49/: README.md  solution.rs
CH50/: README.md  solution.rs
CH51/: README.md  solution.rs
CH52/: README.md  solution.rs
CH53/: README.md  solution.rs
CH54/: README.md  solution.rs
CH55/: README.md  solution.rs
CH56/: README.md  solution.rs
CH57/: README.md  solution.rs
CH58/: README.md  solution.rs
CH59/: README.md  solution.rs
CH60/: README.md  solution.rs
CH61/: README.md  solution.rs
CH62/: README.md  solution.rs
CH63/: README.md  solution.rs
CH64/: README.md  solution.rs
CH65/: README.md  solution.rs
CH66/: README.md  solution.rs
CH67/: README.md  solution.rs
CH68/: README.md  solution.rs
CH69/: README.md  solution.rs
CH70/: README.md  solution.rs
CH71/: README.md  solution.rs
CH72/: README.md  solution.rs
CH73/: README.md  solution.rs
CH74/: README.md  solution.rs
CH75/: README.md  solution.rs
CH76/: README.md  solution.rs
CH77/: README.md  solution.rs
CH78/: README.md  solution.rs
CH79/: README.md  solution.rs
CH80/: README.md  solution.rs
CH81/: README.md  solution.rs
CH82/: README.md  solution.rs
CH83/: README.md  solution.rs
CH84/: README.md  solution.rs
CH85/: README.md  solution.rs
CH86/: README.md  solution.rs
CH87/: README.md  solution.rs
CH88/: README.md  solution.rs
CH89/: README.md  solution.rs
CH90/: README.md  solution.rs
